fixed scrollbars, started styling directory page

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,4 @@
+/* general styling / layout template / navbar */
 body {
     font-family: 'Franaklin Gothic Medium', sans-serif;
     /* background-color: #1a1a1a; */
@@ -38,6 +39,22 @@ body {
 }
 
 
+a {
+    color: #ff9800;
+}
+
+.container {
+    width: 1000px;
+    margin: 0 auto;
+    padding: 100px 20px 20px;
+    background-color: #222;
+    text-align: left;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    gap: 20px;
+}
+
+
+/* index / login styling */
 .login-container {
     width: 500px;
     margin: 20px auto;
@@ -98,20 +115,10 @@ body {
     
 }
 
-a {
-    color: #ff9800;
-}
 
-.container {
-    width: 1000px;
-    margin: 0 auto;
-    padding: 100px 20px 20px;
-    background-color: #222;
-    text-align: left;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    gap: 20px;
-}
 
+
+/* Landing / Profile Page */
 .profile-header {
     display: flex;
     align-items: center;
@@ -141,6 +148,8 @@ a {
     
 }
 
+
+/* Event Page */
 .event-page-container {
     display: flex;
     height: 650px;
@@ -287,7 +296,7 @@ select option {
     background-color: #813015;
 }
 
-/* CSS for Messages page begins */
+/* Messaging Page */
 .msg-header {
     width: 100%;
 }
@@ -305,7 +314,7 @@ select option {
     display: flex;
     flex-direction: column;
     gap: 7px;
-    padding-right: 20px;
+    padding-right: 10px;
     /* border-right: solid white; */
   }
 
@@ -314,12 +323,12 @@ select option {
     display: flex;
     align-items: center;
     padding: 5px 20px 5px 10px;
-    background-color: #5D757B;
+    background-color: #31353B;
     border: none;
     border-radius: 8px;
     /* font-size: 18px; */
     font-weight: bold;
-    color: #151D23;
+    color: #FAF6EA;
     cursor: pointer;
     width: 100%;
     text-align: left;
@@ -438,33 +447,53 @@ select option {
 }
 
 
+/* Directory Styling */
+.directory-entry {
+    display:flex;
+    justify-content: space-between;
+    background-color: transparent;
+    border: 2px solid #5D757B;
+    border-radius: 10px;
+    padding: 5px 20px;
+    margin: 10px auto;
+}
 
+.directory-entry h3 {
+    color:#D9A441;
+}
 
+.directory-entry-buttons {
+    background-color:red;
+}
 
 /* End of CSS for Messages page */
 
 
 
 /* Scrollbars */
-.container::-webkit-scrollbar {
-  width: 10px;
+
+
+::-webkit-scrollbar {
+  width: 15px;
 }
 
-.chat-window::-webkit-scrollbar-track,
-.friends-list::-webkit-scrollbar-track {
-  background: #31353B;         
+::-webkit-scrollbar-track {
+  /* background: #31353B;          */
+  background: transparent;
   border-radius: 5px;
 }
 
-.container::-webkit-scrollbar-thumb {
-  background-color: #31353B;   
+::-webkit-scrollbar-thumb {
+  background-color: #31353B;  
+  width: 20px; 
   border-radius: 5px;
   border: 2px solid #151D23;   
 }
 
-.container::-webkit-scrollbar-thumb:hover {
-  background-color: #D9A441;   /* Mustard on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #D9A441;  
 }
+
 
 
 
